--- a/views/login.pug
+++ b/views/login.pug
@@ -3,9 +3,9 @@ extends master.pug
 block content
   .container.mt-5
     h1(class="login-register") Connexion
-    form
+    form(method="post" action="/login")
         div(class="form-group")
-            input(type="email" class="form-control" id="Email1" aria-describedby="emailHelp" placeholder="Entrez votre adresse email")
+            input(type="email" class="form-control" id="Email1" aria-describedby="emailHelp" name="email" placeholder="Entrez votre adresse email")
         div(class="form-group")
-            input(type="password" class="form-control" id="Password1" placeholder="Password")
+            input(type="password" class="form-control" id="Password1" name="pwd1" placeholder="Password")
         button(type="submit" class="btn btn-primary") Connexion
