--- a/views/login.pug
+++ b/views/login.pug
@@ -8,4 +8,6 @@ block content
             input(type="email" class="form-control" id="Email1" aria-describedby="emailHelp" name="email" placeholder="Entrez votre adresse email")
         div(class="form-group")
             input(type="password" class="form-control" id="Password1" name="pwd1" placeholder="Password")
-        button(type="submit" class="btn btn-primary") Connexion
+        button(type="submit" class="btn btn-primary") Se connecter
+        p ou
+        a(class="btn btn-secondary" href="/auth/github" role="button") Se connecter avec Github
