--- a/views/register.pug
+++ b/views/register.pug
@@ -13,11 +13,11 @@ block content
 
     form(method="post" action="/register")
         div(class="form-group")
-            input(type="text" class="form-control" id="nom" name="firstname" placeholder="Entrez votre nom")
+            input(type="text" class="form-control" id="nom" name="firstname" placeholder="Entrez votre nom" value=(post_data && post_data.firstname))
         div(class="form-group")
-            input(type="text" class="form-control" id="Prénom" name="lastname" placeholder="Entrez votre prénom")
+            input(type="text" class="form-control" id="Prénom" name="lastname" placeholder="Entrez votre prénom" value=(post_data && post_data.lastname))
         div(class="form-group")
-            input(type="email" class="form-control" id="Email" aria-describedby="emailHelp" name="email" placeholder="Entrez votre adresse email")
+            input(type="email" class="form-control" id="Email" aria-describedby="emailHelp" name="email" placeholder="Entrez votre adresse email" value=(post_data && post_data.email))
         div(class="form-group")
             input(type="password" class="form-control" id="Password1" name="pwd1" placeholder="Entrez votre mot de passe")
         div(class="form-group")
