--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,26 @@
 extends master.pug
 
 block content
-  .container.md-12
-    h1 Welcome!!!
+  div(class="jumbotron")
+        div(class="container")
+          h1(class="display-3") Hello, world!
+          p This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.
+          p
+            a(class="btn btn-primary btn-lg" href="#" role="button") Learn more »
+  div(class="container")
+        div(class="row")
+          div(class="col-md-4")
+            h2 Heading
+            p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+            p
+              a(class="btn btn-secondary" href="#" role="button") View details »
+          div(class="col-md-4")
+            h2 Heading
+            p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+            p
+              a(class="btn btn-secondary" href="#" role="button") View details »
+          div(class="col-md-4")
+            h2 Heading
+            p Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+            p
+              a(class="btn btn-secondary" href="#" role="button") View details »
