--- a/views/master.pug
+++ b/views/master.pug
@@ -14,6 +14,8 @@ html(lang="fr")
             if user
                 li
                     | Vous êtes connecté en tant que #{user.firstname} #{user.lastname}
+                li(class="nav-item")
+                    a.nav-link(href="/logout") Déconnexion
             else
                 li(class="nav-item")
                     a.nav-link(href="/login") Connexion
@@ -23,7 +25,8 @@ html(lang="fr")
         div(class="alert alert-"+kind + " alert-flash")
             each message in messages
                 | #{message}
-    block content
+    main
+        block content
     block scripts
         sript(src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous")
